--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "expo-google-sign-in": "^11.0.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
-    "expo-linking": "^6.2.2",
+    "expo-linking": "~5.0.2",
     "expo-random": "~13.2.0",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -57,7 +57,7 @@
     "react-native-svg": "13.9.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.6.4",
+    "react-native-webview": "13.2.2",
     "react-redux": "^8.0.5",
     "validator": "^13.11.0"
   },
