--- a/package.json
+++ b/package.json
@@ -39,17 +39,25 @@
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
+    "expo-navigation-bar": "~2.3.0",
+    "expo-permissions": "^14.4.0",
     "expo-random": "~13.2.0",
+    "expo-screen-orientation": "^6.4.1",
     "expo-status-bar": "~1.6.0",
+    "expo-video-player": "^2.2.0",
     "expo-web-browser": "~12.3.2",
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.20.0",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
+    "react-native-orientation": "^3.1.3",
+    "react-native-orientation-locker": "^1.6.0",
     "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
@@ -59,12 +67,14 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
     "react-redux": "^8.0.5",
+    "shikimori": "^1.0.3",
     "validator": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.71.3",
+    "@types/react-native-orientation": "^5.0.4",
     "@types/react-native-video": "^5.0.19",
     "@types/validator": "^13.11.8",
     "typescript": "^5.3.0"
