fix bugs conclusion 10 episodes anime,  add time anime release, add prototype localization, add Help Center, HomeScreen genres comma is now displayed correctly

--- a/app.json
+++ b/app.json
@@ -36,8 +36,10 @@
     "extra": {
       "eas": {
         "projectId": "cabde16e-c505-4729-861a-b2488aa19c0f"
-      }
+      },
+      "supportsRTL": true
     },
+    "plugins": ["expo-localization"],
     "owner": "kurumi12"
   }
 }
