--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
+    "expo-localization": "^14.8.3",
     "expo-navigation-bar": "~2.3.0",
     "expo-permissions": "^14.4.0",
     "expo-random": "~13.2.0",
@@ -47,6 +48,8 @@
     "expo-video-player": "^2.2.0",
     "expo-web-browser": "~12.3.2",
     "graphql": "^15.8.0",
+    "i18n-js": "^4.4.3",
+    "i18n-ts": "^1.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
