--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "animax",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "rnpm": {
     "assets": [
       "./fonts/"
@@ -9,17 +8,17 @@
   },
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
     "@apollo/react-hooks": "^4.0.0",
+    "@expo/config-plugins": "~7.2.2",
     "@expo/webpack-config": "~19.0.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/blur": "^4.4.0",
-    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -29,38 +28,35 @@
     "@types/react-native-indicators": "^0.16.6",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
-    "expo": "^49.0.22",
+    "expo": "^49.0.0",
     "expo-application": "~5.3.0",
     "expo-av": "~13.4.1",
     "expo-blur": "~12.4.1",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.13",
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
-    "expo-google-sign-in": "^11.0.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
-    "expo-localization": "^14.8.3",
+    "expo-localization": "~14.3.0",
     "expo-navigation-bar": "~2.3.0",
-    "expo-permissions": "^14.4.0",
+    "expo-permissions": "~14.2.1",
     "expo-random": "~13.2.0",
-    "expo-screen-orientation": "^6.4.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-video-player": "^2.2.0",
     "expo-web-browser": "~12.3.2",
     "graphql": "^15.8.0",
-    "i18n-js": "^4.4.3",
-    "i18n-ts": "^1.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
-    "react-native-orientation": "^3.1.3",
-    "react-native-orientation-locker": "^1.6.0",
     "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
@@ -70,14 +66,11 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
     "react-redux": "^8.0.5",
-    "shikimori": "^1.0.3",
     "validator": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.71.3",
-    "@types/react-native-orientation": "^5.0.4",
     "@types/react-native-video": "^5.0.19",
     "@types/validator": "^13.11.8",
     "typescript": "^5.3.0"
