--- a/package.json
+++ b/package.json
@@ -18,60 +18,44 @@
     "@expo/config-plugins": "~7.2.2",
     "@expo/webpack-config": "~19.0.1",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/blur": "^4.4.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/react-native-indicators": "^0.16.6",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "expo": "^49.0.0",
-    "expo-application": "~5.3.0",
     "expo-av": "~13.4.1",
     "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
-    "expo-dev-client": "~2.4.13",
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
-    "expo-linking": "~5.0.2",
     "expo-localization": "~14.3.0",
-    "expo-navigation-bar": "~2.3.0",
     "expo-permissions": "~14.2.1",
-    "expo-random": "~13.2.0",
-    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-video-player": "^2.2.0",
-    "expo-web-browser": "~12.3.2",
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
-    "react-native-dropdown-picker": "^5.4.6",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-indicators": "^0.17.0",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
-    "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-video": "^5.2.1",
-    "react-native-web": "~0.19.6",
-    "react-native-webview": "13.2.2",
     "react-redux": "^8.0.5",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "expo-build-properties": "~0.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "@types/react-native-video": "^5.0.19",
     "@types/validator": "^13.11.8",
     "typescript": "^5.3.0"
   },
