Add localization app, add localization ru and en, fix bug registration and edit profile

--- a/app.json
+++ b/app.json
@@ -36,6 +36,7 @@
     },
     "owner": "kurumi12",
     "plugins": [
+      "expo-localization",
       [
         "expo-build-properties",
         {
