--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_API_URL=http://192.168.1.15:4000/api
+EXPO_PUBLIC_API_URL=http://195.211.141.141:4000/api ##http://192.168.1.15:4000/api
 EXPO_PUBLIC_ANIME_API_GRAPHQL=https://shikimori.me/api/graphql
