--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo": "^49.0.0",
     "expo-av": "~13.4.1",
     "expo-blur": "~12.4.1",
+    "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
@@ -38,6 +39,7 @@
     "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
     "graphql": "^15.8.0",
+    "i18n-js": "^4.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
@@ -50,8 +52,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-redux": "^8.0.5",
-    "validator": "^13.11.0",
-    "expo-build-properties": "~0.8.3"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
