--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
     "@apollo/react-hooks": "^4.0.0",
-    "@expo/config-plugins": "~7.2.2",
-    "@expo/webpack-config": "~19.0.1",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-picker/picker": "2.4.10",
+    "@expo/config-plugins": "~8.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/slider": "4.5.2",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.12",
@@ -26,39 +27,47 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
-    "expo": "^49.0.0",
-    "expo-av": "~13.4.1",
-    "expo-blur": "~12.4.1",
-    "expo-build-properties": "~0.8.3",
-    "expo-constants": "~14.4.2",
-    "expo-file-system": "~15.4.5",
-    "expo-font": "~11.4.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-localization": "~14.3.0",
-    "expo-permissions": "~14.2.1",
-    "expo-status-bar": "~1.6.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "expo": "^51.0.0",
+    "expo-av": "~14.0.6",
+    "expo-blur": "~13.0.2",
+    "expo-build-properties": "^0.12.4",
+    "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-localization": "~15.0.3",
+    "expo-navigation-bar": "^3.0.7",
+    "expo-screen-orientation": "~7.0.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-video": "^1.2.4",
     "graphql": "^15.8.0",
     "i18n-js": "^4.4.3",
+    "kodikwrapper": "^3.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "^0.74.3",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-indicators": "^0.17.0",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-video": "^6.4.3",
     "react-redux": "^8.0.5",
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "@types/validator": "^13.11.8",
-    "typescript": "^5.3.0"
+    "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-class-static-block": "^7.24.7",
+    "@types/react": "~18.2.14",
+    "@types/react-native-indicators": "^0.16.6",
+    "@types/validator": "^13.12.0",
+    "reactotron-react-native": "^5.1.7",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
