FIX Critical bugs Not update Anime, and added full(not auth) localization
Added locales:
 - Ukr
 - Jap
added Language name from short name.
HomePage:
fix bug not swaping anime, fix locales,
remove NewEpisodesAnime, added RecomendationAnime( from your genre(auth set))
Fix critical bug build( api set not corectly(Fixed).

--- a/app.json
+++ b/app.json
@@ -7,14 +7,8 @@
     "orientation": "default",
     "icon": "./assets/adaptive-icon.png",
     "userInterfaceStyle": "light",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "platforms": ["ios", "android", "web"],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.codewithbeto.Animax"
@@ -45,6 +39,11 @@
           }
         }
       ]
-    ]
+    ],
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#181A20"
+    }
   }
 }
