--- a/package.json
+++ b/package.json
@@ -29,27 +29,29 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "^51.0.0",
+    "expo": "~51.0.25",
     "expo-av": "~14.0.6",
     "expo-blur": "~13.0.2",
-    "expo-build-properties": "^0.12.4",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
+    "expo-device": "^6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-localization": "~15.0.3",
     "expo-navigation-bar": "^3.0.7",
+    "expo-notifications": "^0.28.15",
     "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.21",
+    "expo-updates": "~0.25.22",
     "expo-video": "^1.2.4",
     "graphql": "^15.8.0",
     "i18n-js": "^4.4.3",
     "kodikwrapper": "^3.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.3",
+    "react-native": "0.74.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-indicators": "^0.17.0",
