--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-av": "~14.0.6",
     "expo-blur": "~13.0.2",
     "expo-build-properties": "~0.12.5",
+    "expo-camera": "^15.0.14",
     "expo-constants": "~16.0.2",
     "expo-device": "^6.0.2",
     "expo-file-system": "~17.0.1",
@@ -46,6 +47,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.22",
     "expo-video": "^1.2.4",
+    "expo-web-browser": "^13.0.3",
     "graphql": "^15.8.0",
     "i18n-js": "^4.4.3",
     "kodikwrapper": "^3.0.4",
@@ -64,6 +66,7 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^8.0.5",
     "redux-devtools-expo-dev-plugin": "^0.2.1",
+    "socket.io-client": "^4.7.5",
     "validator": "^13.11.0"
   },
   "devDependencies": {
