--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@apollo/client": "^3.8.10",
     "@apollo/react-hooks": "^4.0.0",
     "@expo/config-plugins": "~8.0.0",
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/slider": "4.5.2",
     "@react-native-picker/picker": "^2.7.5",
@@ -29,11 +29,11 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~51.0.25",
-    "expo-av": "~14.0.6",
+    "expo": "~51.0.39",
+    "expo-av": "~14.0.7",
     "expo-blur": "~13.0.2",
     "expo-build-properties": "~0.12.5",
-    "expo-camera": "^15.0.14",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-device": "^6.0.2",
     "expo-file-system": "~17.0.1",
@@ -42,18 +42,20 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-localization": "~15.0.3",
     "expo-navigation-bar": "^3.0.7",
-    "expo-notifications": "^0.28.15",
+    "expo-notifications": "~0.28.19",
     "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.22",
+    "expo-updates": "~0.25.27",
     "expo-video": "^1.2.4",
     "expo-web-browser": "^13.0.3",
     "graphql": "^15.8.0",
     "i18n-js": "^4.4.3",
+    "install": "^0.13.0",
     "kodikwrapper": "^3.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-debugger": "^1.1.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-indicators": "^0.17.0",
@@ -73,6 +75,7 @@
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-class-static-block": "^7.24.7",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-indicators": "^0.16.6",
     "@types/validator": "^13.12.0",
     "reactotron-react-native": "^5.1.7",
