--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "crypto-es": "^2.1.0",
+    "crypto-js": "^4.2.0",
     "expo": "~51.0.39",
     "expo-av": "~14.0.7",
     "expo-blur": "~13.0.2",
@@ -43,6 +45,7 @@
     "expo-localization": "~15.0.3",
     "expo-navigation-bar": "^3.0.7",
     "expo-notifications": "~0.28.19",
+    "expo-random": "^14.0.1",
     "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.27",
@@ -56,6 +59,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-debugger": "^1.1.0",
+    "react-native-device-info": "^14.0.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-indicators": "^0.17.0",
@@ -74,6 +78,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-class-static-block": "^7.24.7",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.8",
     "@types/react-native-indicators": "^0.16.6",
