--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "dependencies": {
     "@apollo/client": "^3.8.10",
     "@apollo/react-hooks": "^4.0.0",
-    "@expo/config-plugins": "~8.0.0",
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/slider": "4.5.2",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-community/slider": "4.5.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.12",
@@ -31,45 +31,45 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "crypto-es": "^2.1.0",
     "crypto-js": "^4.2.0",
-    "expo": "~51.0.39",
-    "expo-av": "~14.0.7",
-    "expo-blur": "~13.0.2",
-    "expo-build-properties": "~0.12.5",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-device": "^6.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.9",
-    "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-localization": "~15.0.3",
-    "expo-navigation-bar": "^3.0.7",
-    "expo-notifications": "~0.28.19",
+    "expo": "^52.0.37",
+    "expo-av": "~15.0.2",
+    "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
+    "expo-camera": "~16.0.17",
+    "expo-constants": "~17.0.7",
+    "expo-device": "~7.0.2",
+    "expo-file-system": "~18.0.11",
+    "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-localization": "~16.0.1",
+    "expo-navigation-bar": "~4.0.8",
+    "expo-notifications": "~0.29.13",
     "expo-random": "^14.0.1",
-    "expo-screen-orientation": "~7.0.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.27",
-    "expo-video": "^1.2.4",
-    "expo-web-browser": "^13.0.3",
+    "expo-screen-orientation": "~8.0.4",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.1",
+    "expo-video": "~2.0.5",
+    "expo-web-browser": "~14.0.2",
     "graphql": "^15.8.0",
     "i18n-js": "^4.4.3",
     "install": "^0.13.0",
     "kodikwrapper": "^3.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
     "react-native-debugger": "^1.1.0",
     "react-native-device-info": "^14.0.2",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-indicators": "^0.17.0",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-video": "^6.4.3",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
     "react-redux": "^8.0.5",
     "redux-devtools-expo-dev-plugin": "^0.2.1",
     "socket.io-client": "^4.7.5",
@@ -79,7 +79,7 @@
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-class-static-block": "^7.24.7",
     "@types/crypto-js": "^4.2.2",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-native-indicators": "^0.16.6",
     "@types/validator": "^13.12.0",
