--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "react-redux": "^8.0.5",
     "redux-devtools-expo-dev-plugin": "^0.2.1",
     "socket.io-client": "^4.7.5",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
