--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/slider": "4.5.5",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -31,25 +32,25 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "crypto-es": "^2.1.0",
     "crypto-js": "^4.2.0",
-    "expo": "^52.0.37",
+    "expo": "~52.0.47",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
-    "expo-build-properties": "~0.13.2",
-    "expo-camera": "~16.0.17",
+    "expo-build-properties": "~0.13.3",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.7",
-    "expo-device": "~7.0.2",
-    "expo-file-system": "~18.0.11",
+    "expo-device": "~7.0.3",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-localization": "~16.0.1",
-    "expo-navigation-bar": "~4.0.8",
-    "expo-notifications": "~0.29.13",
+    "expo-navigation-bar": "~4.0.9",
+    "expo-notifications": "~0.29.14",
     "expo-random": "^14.0.1",
     "expo-screen-orientation": "~8.0.4",
     "expo-status-bar": "~2.0.1",
-    "expo-updates": "~0.27.1",
-    "expo-video": "~2.0.5",
+    "expo-updates": "~0.27.4",
+    "expo-video": "~2.0.6",
     "expo-web-browser": "~14.0.2",
     "graphql": "^15.8.0",
     "i18n-js": "^4.4.3",
@@ -57,7 +58,7 @@
     "kodikwrapper": "^3.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-debugger": "^1.1.0",
     "react-native-device-info": "^14.0.2",
     "react-native-fs": "^2.20.0",
@@ -65,6 +66,7 @@
     "react-native-indicators": "^0.17.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-skeleton": "^1.6.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
